# fastapi-test-project

./: .env  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
app/api/v1/endpoints/: user.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/models/: model.py
app/schemas/: schemas.py
app/services/: user_service.py
env/: pyvenv.cfg
